@@ -1,3 +1,12 @@
+2011-02-23  Fumitoshi Ukai  <ukai@chromium.org>
+
+        Reviewed by Adam Barth.
+
+        WebSocket uses insecure random numbers
+        https://bugs.webkit.org/show_bug.cgi?id=54714
+
+        * JavaScriptCore.exp: Export WTF::cryptographicallyRandomNumber()
+
 2011-02-22  Adam Barth  <abarth@webkit.org>
 
         Reviewed by Ojan Vafai.
